--- a/Login Template 1/login1.html
+++ b/Login Template 1/login1.html
@@ -1,3 +1,26 @@
+@{
+  Validation.RequireField("Username", "Username is required.");
+  Validation.RequireField("Email", "Email Address is required.");
+  Validation.RequireField("Password", "Password is required.");
+
+  var db = Database.Open("LoginPage");
+  var Name = Request.Form["Username"];
+  var Description = Request.Form["Email"];
+  var Price = Request.Form["Password"];
+
+  if (IsPost && Validation.IsValid()) {
+      // Define the insert query. The values to assign to the
+      // columns in the Product table are defined as parameters
+      // with the VALUES keyword.
+      if(ModelState.IsValid) {
+          var insertQuery = "INSERT INTO Login (Username, Email, Password) " +
+              "VALUES (@0, @1, @2)";
+          db.Execute(insertQuery, Username,Email, Password);
+          
+      }
+  }
+}
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -13,8 +36,8 @@
         <div class="signin">
           <form action="#" class="form-sign-in">
             <h1>Sign In</h1>
-            <input type="text" placeholder="Username" />
-            <input type="password" placeholder="Password" />
+            <input type="text" placeholder="Username" value="@Username"/>
+            <input type="password" placeholder="Password"  value="@Password"/>
             <a href="#">Forgot your password?</a>
             <button class="btn btn-form btn-ghost">SIGN IN</button>
           </form>
@@ -23,9 +46,9 @@
         <div class="signup">
           <form action="" class="form-sign-up">
             <h1>Sign Up</h1>
-            <input type="text" placeholder="Username" />
-            <input type="email" placeholder="Email" />
-            <input type="password" placeholder="Password" />
+            <input type="text" placeholder="Username" value="@Username"/>
+            <input type="email" placeholder="Email" value="@Email" />
+            <input type="password" placeholder="Password" value="@Password" />
             <button class="btn btn-form  btn-ghost">SIGN UP</button>
           </form>
         </div>
